Add support of overpass-filtered roads in proximity of stops, remove arm version